rev to original package.json, increase version number

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "yukon",
-  "version": "1.10.0-beta",
+  "version": "1.11.0-beta",
   "scripts": {
     "dev": "webpack serve",
     "build": "webpack --mode production --env obfuscate=false",
-    "build-crumbs": "node ./utils/build-crumbs.js",
-    "editor": "phasereditor2d-launcher -project ."
+    "build-crumbs": "node ./utils/build-crumbs.js"
   },
   "repository": {
     "type": "git",
